--- a/principal/templates/sections/home.html
+++ b/principal/templates/sections/home.html
@@ -171,7 +171,7 @@
                         </div>
                         <div class="ms-3">
                             <h4 class="text-primary">Email</h4>
-                            <p class="h5" target="_blank">marioqm55555@gmail.com</p>
+                            <p class="h5" target="_blank">NexusIA@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -192,6 +192,10 @@
                             <div class="mb-4">
                                 <input type="email" class="form-control border-0 py-3" name="email"
                                     placeholder="Su Email" required />
+                            </div>
+                            <div class="mb-4">
+                                <input type="text" class="form-control border-0 py-3" name="celular"
+                                    placeholder="Su número de celular" required />
                             </div>
                             <div class="mb-4">
                                 <textarea class="w-100 form-control border-0 py-3" name="mensaje" rows="6"
