--- a/dashboard/templates/mensajes.html
+++ b/dashboard/templates/mensajes.html
@@ -32,6 +32,7 @@
                         <th scope="col">#</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Email</th>
+                        <th scope="col">N. de Celular</th>
                         <th scope="col">Mensaje</th>
                         <th scope="col">Enviado</th>
                         <th scope="col">Acciones</th>
@@ -43,6 +44,7 @@
                         <td>{{ forloop.counter0|add:page_obj.start_index  }}</td>
                         <td>{{ mensaje.nombre }}</td>
                         <td>{{ mensaje.email }}</td>
+                        <td>{{ mensaje.celular }}</td>
                         <td>{{ mensaje.mensaje }}</td>
                         <td>{{ mensaje.enviado|date:"d/m/Y H:i" }}</td>
                         <td>
@@ -53,7 +55,7 @@
                         </td>
                         {% empty %}
                     <tr>
-                        <td class="text-center" colspan="6">No Hay Mensajes Disponibles.</td>
+                        <td class="text-center" colspan="7">No Hay Mensajes Disponibles.</td>
                     </tr>
                     </tr>
                     {% endfor %}
