--- a/dashboard/templates/mensajes.html
+++ b/dashboard/templates/mensajes.html
@@ -44,7 +44,7 @@
                         <td>{{ forloop.counter0|add:page_obj.start_index  }}</td>
                         <td>{{ mensaje.nombre }}</td>
                         <td>{{ mensaje.email }}</td>
-                        <td>{{ mensaje.celular }}</td>
+                        <td>{{ mensaje.num_celular }}</td>
                         <td>{{ mensaje.mensaje }}</td>
                         <td>{{ mensaje.enviado|date:"d/m/Y H:i" }}</td>
                         <td>
