--- a/principal/templates/sections/home.html
+++ b/principal/templates/sections/home.html
@@ -194,7 +194,7 @@
                                     placeholder="Su Email" required />
                             </div>
                             <div class="mb-4">
-                                <input type="text" class="form-control border-0 py-3" name="celular"
+                                <input type="text" class="form-control border-0 py-3" name="num_celular"
                                     placeholder="Su número de celular" required />
                             </div>
                             <div class="mb-4">
