--- a/templates/base.html
+++ b/templates/base.html
@@ -123,14 +123,13 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <img src="{% static 'img/carrusel-3.webp' %}" class="img-fluid" alt="First slide">
+                        <img src="{% static 'img/carrusel-1.jpg' %}" class="img-fluid" alt="First slide">
                         <div class="carousel-caption">
                             <div class="container carousel-content">
-                                <h1 class="text-white display-1 mb-4 animated fadeInRight">¡Soluciones Innovadoras a la Medida de Tu Negocio!</h1>
+                                <h1 class="text-white display-1 mb-4 animated fadeInRight">¡Soluciones Innovadoras!</h1>
                                 <p class="mb-4 text-white fs-5 animated fadeInDown">
                                     Descubre el potencial ilimitado de tu empresa con Nexus. 
-                                    Nos especializamos en brindar soluciones tecnológicas personalizadas, 
-                                    diseñadas para llevar tu negocio al siguiente nivel. 
+                                    Nos especializamos en brindar soluciones tecnológicas personalizadas.
                                 </p>
                                 <a href="#services" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Ver más</button></a>
                                 <a href="#contact" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contacto</button></a>
@@ -138,7 +137,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src=" {% static 'img/carrusel-4.webp' %}" class="img-fluid" alt="Second slide">
+                        <img src=" {% static 'img/carrusel-2.jpg' %}" class="img-fluid" alt="Second slide">
                         <div class="carousel-caption">
                             <div class="container carousel-content">
                                 <h1 class="text-white display-1 mb-4 animated fadeInLeft">
