--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="d-none d-xl-flex flex-shirink-0">
                         <div id="phone-tada" class="d-flex align-items-center justify-content-center me-4">
-                            <a href="https://web.whatsapp.com/" class="position-relative animated tada infinite" target="_blank">
+                            <a href="https://wa.link/x8g3gf" class="position-relative animated tada infinite" target="_blank">
                                 <i class="fab fa-whatsapp text-white fa-2x"></i>
                                 <div class="position-absolute" style="top: -7px; left: 20px;">
                                     <span><i class="fa fa-comment-dots text-secondary"></i></span>
@@ -126,7 +126,7 @@
                         <img src="{% static 'img/carrusel-1.jpg' %}" class="img-fluid" alt="First slide">
                         <div class="carousel-caption">
                             <div class="container carousel-content">
-                                <h1 class="text-white display-1 mb-4 animated fadeInRight">¡Soluciones Innovadoras!</h1>
+                                <h1 class="text-white display-1 mb-4 animated fadeInRight">¡Servicios de Calidad Digital!</h1>
                                 <p class="mb-4 text-white fs-5 animated fadeInDown">
                                     Descubre el potencial ilimitado de tu empresa con Nexus. 
                                 </p>
@@ -140,12 +140,12 @@
                         <div class="carousel-caption">
                             <div class="container carousel-content">
                                 <h1 class="text-white display-1 mb-4 animated fadeInLeft">
-                                    ¡Servicios de Calidad Digital!
+                                    ¡Soluciones Innovadoras!
                                 </h1>
                                 <p class="mb-4 text-white fs-5 animated fadeInDown">
                                     Transformamos tu visión en resultados excepcionales.  
                                 </p>
-                                <a href="#services" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Ver más</button></a>
+                                <a href="projects" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Ver más</button></a>
                                 <a href="#contact" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contacto</button></a>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
                             <a href="" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i class="fab fa-facebook-f text-primary"></i></a>
                             <a href="" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i class="fab fa-twitter text-primary"></i></a>
                             <a href="" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i class="fab fa-instagram text-primary"></i></a>
-                            <a href="https://web.whatsapp.com/" target="_blank" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i class="fab fa-whatsapp text-primary"></i></a>
+                            <a href="https://wa.link/x8g3gf" target="_blank" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i class="fab fa-whatsapp text-primary"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
