update and config code y files statics

--- a/templates/base.html
+++ b/templates/base.html
@@ -145,7 +145,7 @@
                                 <p class="mb-4 text-white fs-5 animated fadeInDown">
                                     Transformamos tu visión en resultados excepcionales.  
                                 </p>
-                                <a href="projects" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Ver más</button></a>
+                                <a href="#projects" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Ver más</button></a>
                                 <a href="#contact" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contacto</button></a>
                             </div>
                         </div>
