update icon whatsapp

--- a/templates/base.html
+++ b/templates/base.html
@@ -234,7 +234,7 @@
         <!-- Footer End -->
 
         <!-- Back to Top -->
-        <a href="#" class="btn btn-secondary btn-square rounded-circle back-to-top"><i class="fab fa-whatsapp text-white"></i></a>
+        <a href="https://wa.link/x8g3gf" class="btn btn-secondary btn-square rounded-circle back-to-top"><i class="fab fa-whatsapp text-white"></i></a>
         
         {% block url_js %}
         <!-- JavaScript Libraries -->
