--- a/templates/Dashboard/dashboard.html
+++ b/templates/Dashboard/dashboard.html
@@ -36,6 +36,7 @@
 
     <!-- Template Stylesheet -->
     <link href="{% static 'admin/css/style.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'admin/css/icon-mensaje.css' %}  admin/css/icon-mensaje.css">
 </head>
 {% endblock header %}
 
@@ -56,10 +57,7 @@
         <!-- Sidebar Start -->
         {% block sidebar %}
         <div class="sidebar pe-4 pb-3">
-            <nav class="navbar bg-light navbar-light">
-                <a href="{% url 'servicios' %}" class="navbar-brand mx-4 mb-3">
-                    <h3 class="text-primary">Admin Nexus IA</h3>
-                </a>
+            <br><nav class="navbar bg-light navbar-light">
                 <div class="d-flex align-items-center ms-4 mb-4">
                     <div class="position-relative">
                         <img class="rounded-circle" src="{% static 'admin/img/icon-user-admin.png' %}" alt="" style="width: 40px; height: 40px;">
@@ -69,7 +67,7 @@
                      {% if user.is_authenticated %}
                           <h6 class="mb-0">{{ user.first_name }}</h6>
                          {% if user.is_superuser %}  
-                           <span>Administrador</span>
+                           <span>admin</span>
                          {% else %}
                            <span>Usuario</span> 
                         {% endif %}
@@ -86,6 +84,11 @@
                             <a href="{% url 'proyectos-inactivos' %}" class="dropdown-item"><i class="fas fa-briefcase"></i> Proyectos</a>
                         </div>
                     </div>
+                    <a href="{% url 'mensajes' %}" class="nav-item nav-link"><i class="fas fa-comment-dots"></i>Todos
+                        {% if cantidad_mensajes > 0 %}
+                            <span id="contador-mensajes" class="badge rounded-pill bg-primary">{{cantidad_mensajes}}</span>
+                        {% endif %}
+                    </a>
                 </div>
             </nav>
         </div>
@@ -98,9 +101,6 @@
         {% block navbar %}
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0">
-            <a href="{% url 'servicios' %}" class="navbar-brand d-flex d-lg-none me-4">
-                <h2 class="text-primary mb-0"><i class="fa fa-hashtag"></i></h2>
-            </a>
             <a href="#" class="sidebar-toggler flex-shrink-0">
                 <i class="fa fa-bars"></i>
             </a>
@@ -108,20 +108,35 @@
                 <input class="form-control border-0" type="search" placeholder="Buscar">
             </form>
             <div class="navbar-nav align-items-center ms-auto">
-                <a href="{% url 'mensajes' %}" class="nav-item nav-link"><i class="fas fa-envelope me-2"></i>
-                    Mensajes
-                    {% if cantidad_mensajes > 0 %}
-                        <span id="contador-mensajes" class="badge rounded-pill bg-primary">{{ cantidad_mensajes }}</span>
-                    {% endif %}
-                </a>
-                
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+                        <i class="fa fa-envelope me-lg-2"></i>
+                        <span class="d-none d-lg-inline-flex">Mensajes</span>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
+                        {% for mensaje in mensajes %}
+                        <a href="#" class="dropdown-item">
+                            <div class="d-flex align-items-center">
+                                <img class="rounded-circle" src="{% static 'admin/img/user2.png' %}" alt="" style="width: 40px; height: 40px;">
+                                <div class="ms-2">
+                                    <h6 class="fw-normal mb-0">{{ mensaje.nombre }} te envío un mensaje</h6>
+                                    <small>hace {{ mensaje.enviado|timesince }}</small>
+                                </div>
+                            </div>
+                        </a>
+                        <hr class="dropdown-divider">
+                        {% endfor %}
+                        <a href="{% url 'mensajes' %}" class="dropdown-item text-center"><i class="fas fa-comment-dots"></i> Ver todos</a>
+                    </div>
+                </div>
+               
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                         <img class="rounded-circle me-lg-2" src="{% static 'admin/img/icon-user-admin.png' %}" alt="" style="width: 40px; height: 40px;">
-                        <span class="d-none d-lg-inline-flex">{{ user.first_name }}</span>
+                        <span class="d-none d-lg-inline-flex">{{ user.username }}</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
-                        <a href="{% url 'perfil' %}" class="dropdown-item"><i class="fa fa-user-circle me-2"></i> Mi Perfil</a>
+                        <a href="{% url 'perfil' %}" class="dropdown-item"><i class="fa fa-user-circle me-2"></i>Mi perfil</a>
                         <a href="{% url 'logout' %}" id="logoutLink" class="dropdown-item"><i class="fa fa-sign-out-alt me-2"></i> Salir</a>
                     </div>
                 </div>
