--- a/templates/Dashboard/dashboard.html
+++ b/templates/Dashboard/dashboard.html
@@ -125,6 +125,15 @@
                             </div>
                         </a>
                         <hr class="dropdown-divider">
+                        {% empty %}
+                        <div class="dropdown-item">
+                            <div class="d-flex align-items-center">
+                                <div class="ms-2">
+                                    <h6 class="fw-normal mb-0">No hay mensajes disponibles</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <hr class="dropdown-divider">
                         {% endfor %}
                         <a href="{% url 'mensajes' %}" class="dropdown-item text-center"><i class="fas fa-comment-dots"></i> Ver todos</a>
                     </div>
