--- a/dashboard/templates/projects/list-projects.html
+++ b/dashboard/templates/projects/list-projects.html
@@ -39,7 +39,7 @@
                     <tr>
                         <td>{{ forloop.counter }}</td>
                         <td>
-                            <img src="{{ project.foto.url }}" alt="{{ project.titulo }}" width="100">
+                            <img src="{{ project.url_foto }}" alt="{{ project.titulo }}" width="100">
                         </td>
                         <td>{{ project.titulo }}</td>
                         <td>{{ project.descripcion }}</td>
