--- a/dashboard/templates/services/edit-service.html
+++ b/dashboard/templates/services/edit-service.html
@@ -8,10 +8,13 @@
             <h4 class="text-center mb-4">Editar Servicio</h4>
             <form method="post" action="{% url 'editar-servicio' service.id %}" enctype="multipart/form-data">
                 {% csrf_token %}
-                <div class="mb-3">
-                    <label for="foto">Foto</label>
-                    <br><img class="mb-3" src="{{ service.foto.url }}" alt="{{ service.titulo }}" width="100">
-                    <input class="form-control form-control-lg" id="formFileLg" name="foto" type="file">
+                
+                <br><img class="mb-3" src="{{ service.url_foto }}" alt="{{ service.titulo }}" width="100">
+                
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" name="url_foto" value="{{ service.url_foto }}" id="floatingInput"
+                        placeholder="Escriba la URL de la foto" required>
+                    <label for="titulo">URL de la foto</label>
                 </div>
                 
                 <div class="form-floating mb-3">
