--- a/dashboard/templates/services/list-services.html
+++ b/dashboard/templates/services/list-services.html
@@ -38,7 +38,7 @@
                     <tr>
                         <td>{{  forloop.counter }}</td>
                         <td>
-                            <img src="{{ service.foto.url }}" alt="{{ service.titulo }}" width="100">
+                            <img src="{{ service.url_foto }}" alt="{{ service.titulo }}" width="100">
                         </td>
                         <td>{{ service.titulo }}</td>
                         <td>{{ service.fecha_creacion|date:"d/m/Y H:i" }}</td>
