--- a/dashboard/templates/services/create-service.html
+++ b/dashboard/templates/services/create-service.html
@@ -10,9 +10,10 @@
                 
                 {% csrf_token %}
                 
-                <div class="mb-3">
-                    <label for="foto">Foto</label>
-                    <input class="form-control form-control-lg" id="formFileLg" name="foto" type="file" required>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" name="url_foto" id="floatingInput"
+                       placeholder="Escriba la URL de la foto" required>
+                    <label for="titulo">URL de la foto</label>
                 </div>
                 
                 <div class="form-floating mb-3">
