--- a/templates/base.html
+++ b/templates/base.html
@@ -234,8 +234,8 @@
         <!-- Footer End -->
 
         <!-- Back to Top -->
-        <a href="https://wa.link/x8g3gf" class="btn btn-secondary btn-square rounded-circle"><i class="fab fa-whatsapp text-white"></i></a>
-        
+        <a href="https://wa.link/x8g3gf" class="btn btn-secondary btn-square rounded-circle back-to-top"><i class="fab fa-whatsapp text-white"></i></a>
+
         {% block url_js %}
         <!-- JavaScript Libraries -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
