--- a/templates/base.html
+++ b/templates/base.html
@@ -234,7 +234,7 @@
         <!-- Footer End -->
 
         <!-- Back to Top -->
-        <a href="https://wa.link/x8g3gf" target="_blank" class="btn btn-secondary btn-square rounded-circle back-to-top"><i class="fab fa-whatsapp text-white"></i></a>
+        <a href="#" onclick="window.location.href = 'https://wa.link/x8g3gf'; return false;" class="btn btn-secondary btn-square rounded-circle back-to-top"><i class="fab fa-whatsapp text-white"></i></a>
 
         {% block url_js %}
         <!-- JavaScript Libraries -->
