--- a/dashboard/templates/services/create-service.html
+++ b/dashboard/templates/services/create-service.html
@@ -13,13 +13,19 @@
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" name="url_foto" id="floatingInput"
                        placeholder="Escriba la URL de la foto" required>
-                    <label for="titulo">URL de la foto</label>
+                    <label for="url_foto">URL de la foto</label>
                 </div>
                 
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" name="titulo" id="floatingInput"
                         placeholder="Escriba un título" required>
                     <label for="titulo">Título</label>
+                </div>
+
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" name="link_pdf" id="floatingInput"
+                       placeholder="Escriba el enlace del dosier" required>
+                    <label for="link_pdf">Enlace del Dosier en PDF</label>
                 </div>
                 
                 <div class="form-floating">
