--- a/templates/Dashboard/dashboard.html
+++ b/templates/Dashboard/dashboard.html
@@ -114,7 +114,7 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
                         {% for mensaje in mensajes %}
-                        <a href="#" class="dropdown-item">
+                        <a href="{% url 'mensajes' %}" class="dropdown-item">
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle" src="{% static 'admin/img/user2.png' %}" alt="" style="width: 40px; height: 40px;">
                                 <div class="ms-2">
