--- a/principal/templates/sections/home.html
+++ b/principal/templates/sections/home.html
@@ -79,7 +79,7 @@
                                 {{ service.descripcion }}
                             </p>
                             <div class="col-12 text-center"> <!-- Añadido contenedor para centrar el botón -->
-                                <a href="{{ service.link_pdf }}" download="{{ service.titulo }}.pdf" class="btn btn-secondary text-white px-5 py-3 rounded-pill"><i class="fas fa-download"></i> Descargar</a>
+                                <a href="{{ service.link_pdf }}" download="{{ service.titulo }}.pdf" class="btn btn-secondary text-white px-5 py-3 rounded-pill"><i class="fas fa-download"></i> Descargar Dosier</a>
                             </div>
                         </div>
                     </div>
