--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                 <div class="d-flex justify-content-between topbar">
                     <div class="top-info">
                         <small class="me-3 text-white"><a href="#"><i class="fas fa-map-marker-alt me-2 text-white"></i></a>Santa Rosa, Ecuador</small>
-                        <small class="me-3 text-white"><a href="#"><i class="fas fa-envelope me-2 text-white"></i></a>NexusIA@gmail.com</small>
+                        <small class="me-3 text-white"><a href="#"><i class="fas fa-envelope me-2 text-white"></i></a>nexusia00@gmail.com</small>
                     </div>
                     <div id="note" class="text-white d-none d-xl-flex"><small>¡Podemos ayudarle a expandir tu negocio!</small></div>
                     <div class="top-link">
@@ -213,19 +213,19 @@
                         <p class="h3 text-white">Contacto</p>
                         <div class="text-white mt-4 d-flex flex-column contact-link">
                             <p class="pb-3 text-light border-bottom border-primary"><i class="fas fa-map-marker-alt text-white me-2"></i> Santa Rosa, Ecuador</p>
-                            <p class="py-3 text-light border-bottom border-primary"><i class="fab fa-whatsapp text-white me-2"></i> 098 798 2307 </p>
-                            <p class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-white me-2"></i> NexusIA@gmail.com</>
+                            <p class="py-3 text-light border-bottom border-primary"><i class="fab fa-whatsapp text-white me-2"></i> 098 798 2307</p>
+                            <p class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-white me-2"></i> nexusia00@gmail.com</>
                         </div>
                     </div>
                 </div>
                 <hr class="text-light mt-5 mb-4">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start">
-                        <span class="text-light"><a href="#" class="text-secondary"><i class="fas fa-copyright text-secondary me-2"></i>Nexus.com</a> Todos los derechos reservados.</span>
+                        <span class="text-light"><a href="#" class="text-secondary"><i class="fas fa-copyright text-secondary me-2"></i>Nexus-ia.com. </a> Todos los derechos reservados.</span>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        <span class="text-light">Todos los derechos reservados <a href="https://htmlcodex.com" class="text-secondary"> HTML Codex</a> Distribuido por <a href="https://themewagon.com" class="text-secondary">ThemeWagon</a></span>
+                        <span class="text-light">Todos los derechos reservados <a href="https://htmlcodex.com" class="text-secondary"> HTML Codex</a> distribuido por <a href="https://themewagon.com" class="text-secondary">ThemeWagon</a></span>
                     </div>
                 </div>
             </div>
