--- a/principal/templates/sections/home.html
+++ b/principal/templates/sections/home.html
@@ -11,10 +11,10 @@
         <div class="row g-5">
             <div class="col-lg-5 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".3s">
                 <div class="h-100 position-relative">
-                    <img src="{% static 'img/about-1.jpg' %}" class="img-fluid w-75 rounded" alt=""
+                    <img src="{% static 'img/about-6.jpg' %}" class="img-fluid w-75 rounded" alt=""
                         style="margin-bottom: 25%" />
                     <div class="position-absolute w-75" style="top: 25%; left: 25%">
-                        <img src="{% static 'img/about-2.jpg' %}" class="img-fluid w-100 rounded" alt="" />
+                        <!-- <img src="{% static 'img/about-6.jpg' %}" class="img-fluid w-100 rounded" alt="" />  -->
                     </div>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                         </div>
                         <div class="ms-3">
                             <h4 class="text-primary">Email</h4>
-                            <p class="h5" target="_blank">nexusia00@gmail.com</p>
+                            <p class="h5" target="_blank">nexusIA@gmail.com</p>
                         </div>
                     </div>
                 </div>
