--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap" rel="stylesheet"> 
 
         <!-- Icon Font Stylesheet -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
@@ -47,12 +48,12 @@
                 <div class="d-flex justify-content-between topbar">
                     <div class="top-info">
                         <small class="me-3 text-white"><a href="#"><i class="fas fa-map-marker-alt me-2 text-white"></i></a>Santa Rosa, Ecuador</small>
-                        <small class="me-3 text-white"><a href="#"><i class="fas fa-envelope me-2 text-white"></i></a>nexusia00@gmail.com</small>
+                        <small class="me-3 text-white"><a href="#"><i class="fas fa-envelope me-2 text-white"></i></a>nexusIA@gmail.com</small>
                     </div>
                     <div id="note" class="text-white d-none d-xl-flex"><small>¡Podemos ayudarle a expandir tu negocio!</small></div>
                     <div class="top-link">
                         <a href="" class="bg-light nav-fill btn btn-sm-square rounded-circle"><i class="fab fa-facebook-f text-primary"></i></a>
-                        <a href="" class="bg-light nav-fill btn btn-sm-square rounded-circle"><i class="fab fa-twitter text-primary"></i></a>
+                        <a href="" class="bg-light nav-fill btn btn-sm-square rounded-circle"><i class="fab fa-tiktok text-primary"></i></a>
                         <a href="" class="bg-light nav-fill btn btn-sm-square rounded-circle"><i class="fab fa-instagram text-primary"></i></a>
                     </div>
                 </div>
@@ -195,7 +196,7 @@
                         </p>
                         <div class="d-flex hightech-link">
                             <a href="" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i class="fab fa-facebook-f text-primary"></i></a>
-                            <a href="" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i class="fab fa-twitter text-primary"></i></a>
+                            <a href="" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i class="fab fa-tiktok text-primary"></i></a>
                             <a href="" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i class="fab fa-instagram text-primary"></i></a>
                             <a href="https://wa.link/x8g3gf" target="_blank" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i class="fab fa-whatsapp text-primary"></i></a>
                         </div>
@@ -214,7 +215,7 @@
                         <div class="text-white mt-4 d-flex flex-column contact-link">
                             <p class="pb-3 text-light border-bottom border-primary"><i class="fas fa-map-marker-alt text-white me-2"></i> Santa Rosa, Ecuador</p>
                             <p class="py-3 text-light border-bottom border-primary"><i class="fab fa-whatsapp text-white me-2"></i> 098 798 2307</p>
-                            <p class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-white me-2"></i> nexusia00@gmail.com</>
+                            <p class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-white me-2"></i> nexusIA@gmail.com</>
                         </div>
                     </div>
                 </div>
