--- a/principal/templates/sections/home.html
+++ b/principal/templates/sections/home.html
@@ -11,11 +11,22 @@
         <div class="row g-5">
             <div class="col-lg-5 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".3s">
                 <div class="h-100 position-relative">
-                    <img src="{% static 'img/about-6.jpg' %}" class="img-fluid w-75 rounded" alt=""
+                    <div class="project-item">
+                        <div class="project-img">
+                            <img src="{% static 'img/about-6.jpg' %}" class="img-fluid w-100 rounded" alt="about-6.jpg" />
+                            <div class="project-content">
+                                <a href="https://nexusestudio.pic-time.com/-myfirstgallery/gallery" class="text-center" target="_blank">
+                                    <h4 class="text-white bold"><i class="fas fa-images"></i> Ver Galería</h4>
+                                    <!-- <p class="m-0 text-white">Click para ver mas fotos</p> -->
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <img src="{% static 'img/about-6.jpg' %}" class="img-fluid w-75 rounded" alt=""
                         style="margin-bottom: 25%" />
                     <div class="position-absolute w-75" style="top: 25%; left: 25%">
-                        <!-- <img src="{% static 'img/about-6.jpg' %}" class="img-fluid w-100 rounded" alt="" />  -->
-                    </div>
+                        <!-- <img src="{% static 'img/about-6.jpg' %}" class="img-fluid w-100 rounded" alt="" />
+                    </div> -->
                 </div>
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".5s">
